<resources>
    <string name="app_name">SampleApp</string>
    <string name="no_information_text">No Information available</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="internet_not_available">Please check your internet</string>
    <string name="name">Name</string>
    <string name="des">Description</string>
    <string name="location">Location</string>
    <string name="cost">Cost</string>
    <string name="add">Add</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_des">Please Enter Description</string>
    <string name="enter_location">Please Enter Location</string>
    <string name="enter_cost">Please Enter Cost</string>
    <string name="camera_not_support">Your device does not support Camera</string>
    <string name="allow_storage_permission">Please allow Storage Permission to access this feature</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="select_image">Please Select Image</string>
    <string name="item_added">Item Added</string>
    <string name="edit">Edit</string>
    <string name="item_edited">Item Edited</string>
    <string name="delete">Delete</string>
    <string name="item_deleted">Item Deleted</string>
</resources>
