<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_photo_black_24dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/des"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/location"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edtCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/cost"
        android:inputType="number"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="gone" />
</LinearLayout>